# quadruped-controller_mujoco

./: README.md
quadruped_controller_ros/: .gitignore  README.md
quadruped_controller_ros/quadruped_controller/: .package.xml.swp  CMakeLists.txt  config.h.in  main.cpp  package.xml
quadruped_controller_ros/quadruped_controller/common/: CMakeLists.txt
quadruped_controller_ros/quadruped_controller/common/include/Controllers/: ContactEstimator.h  DesiredStateCommand.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
quadruped_controller_ros/quadruped_controller/common/include/Dynamics/: Aliengo.h  FloatingBaseModel.h  MiniCheetah.h  Quadruped.h  UnitreeA1.h  UnitreeGo1.h
quadruped_controller_ros/quadruped_controller/common/include/Math/: orientation_tools.h
quadruped_controller_ros/quadruped_controller/common/include/Types/: cppTypes.h
quadruped_controller_ros/quadruped_controller/common/src/Controllers/: DesiredStateCommand.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
quadruped_controller_ros/quadruped_controller/common/src/Dynamics/: Quadruped.cpp
quadruped_controller_ros/quadruped_controller/common/src/Utilities/: PeriodicTask.cpp
quadruped_controller_ros/quadruped_controller/config/: initial_jpos_ctrl.yaml  mc-mit-ctrl-user-parameters.yaml
quadruped_controller_ros/quadruped_controller/fsm_states/: CMakeLists.txt  ControlFSM.cpp  ControlFSM.h  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_JointPD.cpp  FSM_State_Locomotion.h  FSM_State_StandUp.cpp
quadruped_controller_ros/quadruped_controller/launch/: mit_controller.launch
quadruped_controller_ros/quadruped_controller/mit_ctrl/: CMakeLists.txt
quadruped_controller_ros/quadruped_controller/mit_ctrl/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp
quadruped_controller_ros/quadruped_controller/mit_ctrl/convexMPC/: CMakeLists.txt  ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  Gait.cpp
quadruped_controller_ros/quadruped_controller/robot/: CMakeLists.txt
quadruped_controller_ros/quadruped_controller/robot/include/: GazeboCommunicationChannel.h  JPosInitializer.h  MujocoCommunicationChannel_2.h  RobotController.h  RobotRunner.h  SimulationBridge.h  SimulationBridge_Mujoco.h
quadruped_controller_ros/quadruped_controller/robot/src/: GazeboCommunicationChannel.cpp  JPosInitializer.cpp  MujocoCommunicationChannel.cpp  MujocoCommunicationChannel_2.cpp  RobotRunner.cpp  SimulationBridge.cpp  SimulationBridge_Mujoco.cpp
quadruped_controller_ros/teleop_twist_keyboard_cpp/: CMakeLists.txt
quadruped_controller_ros/teleop_twist_keyboard_cpp/launch/: start_turtlebot_controller.launch
quadruped_controller_ros/teleop_twist_keyboard_cpp/robot/include/: GazeboCommunicationChannel.h  SimulationBridge.h
quadruped_controller_ros/teleop_twist_keyboard_cpp/robot/src/: GazeboCommunicationChannel.cpp  SimulationBridge.cpp
quadruped_controller_ros/teleop_twist_keyboard_cpp/src/: teleop_twist_keyboard.cpp  teleop_twist_keyboardv2.cpp
quadruped_controller_ros/unitree_ros/ocs2_quadruped_msgs/: CMakeLists.txt  package.xml
quadruped_controller_ros/unitree_ros/ocs2_quadruped_msgs/msg/: FootForces.msg  JointCommandArray.msg  JointState.msg  LowState.msg  WbcTrackingErrors.msg
quadruped_controller_ros/unitree_ros/robots/a1_description/launch/: a1_rviz.launch
quadruped_controller_ros/unitree_ros/robots/big_doggo_description/: CMakeLists.txt  package.xml
quadruped_controller_ros/unitree_ros/robots/big_doggo_description/config/: robot_control.yaml
quadruped_controller_ros/unitree_ros/robots/big_doggo_description/launch/: big_doggo_description_rviz.launch
quadruped_controller_ros/unitree_ros/robots/big_doggo_description/meshes/: calf.STL  hip.STL  thigh.STL  thigh_mirror.STL  trunk.STL
quadruped_controller_ros/unitree_ros/robots/big_doggo_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro
quadruped_controller_ros/unitree_ros/robots/mini_cheetah_description/: CMakeLists.txt  package.xml
quadruped_controller_ros/unitree_ros/robots/mini_cheetah_description/config/: robot_control.yaml
quadruped_controller_ros/unitree_ros/robots/mini_cheetah_description/launch/: mini_cheetah_rviz.launch
quadruped_controller_ros/unitree_ros/robots/mini_cheetah_description/meshes/: calf.STL  thigh.STL
quadruped_controller_ros/unitree_ros/robots/mini_cheetah_description/meshes/old/: hip.STL
quadruped_controller_ros/unitree_ros/robots/mini_cheetah_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.urdf  robot.xacro
quadruped_controller_ros/unitree_ros/unitree_controller/src/: body.cpp
quadruped_controller_ros/unitree_ros/unitree_gazebo/: CMakeLists.txt
quadruped_controller_ros/unitree_ros/unitree_gazebo/launch/: normal.launch
quadruped_controller_ros/unitree_ros/unitree_gazebo/worlds/: stairs.world
quadruped_controller_ros/unitree_ros/unitree_legged_msgs/: CMakeLists.txt
quadruped_controller_ros/unitree_ros/unitree_legged_msgs/msg/: LowCmd.msg  StateEstimate.msg
unitree_mujoco/simulate/: CMakeLists.txt  config.yaml  package.xml
unitree_mujoco/simulate/src/: main.cc
unitree_mujoco/simulate/src/unitree_sdk2_bridge/: unitree_sdk2_bridge.cc  unitree_sdk2_bridge.h
unitree_mujoco/unitree_robots/b2/: b2.xml
unitree_mujoco/unitree_robots/go1/: go1.xml
unitree_mujoco/unitree_robots/go2/: go2.xml
