<package format="2">
  <name>unitree_mujoco</name>
  <version>0.0.1</version>
  <description>The Unitree Mujoco simulation bridge</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>unitree_legged_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unitree_legged_msgs</exec_depend>

</package>
