<?xml version="1.0"?>
<package format="2">
    <name>big_doggo_description</name>
    <version>0.0.0</version>
    <description>The big_doggo_description package</description>

    <maintainer email="stuljc@i2r.a-star.edu.sg">I2R</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
